--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "sass": "^1.66.1",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.18"
+    "@types/jquery": "^3.5.18",
+    "@types/react-modal": "^3.16.2"
   }
 }
