--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
+    "@prisma/client": "^5.0.0",
     "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.18",
-    "@types/react-modal": "^3.16.2"
+    "@types/react-modal": "^3.16.2",
+    "prisma": "^5.0.0"
   }
 }
